<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/selector_home_icon"
        android:iconTint="@color/ivory_white"
        android:title="@string/home" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/selector_news_icon"
        android:iconTint="@color/ivory_white"
        android:title="@string/news" />

    <item
        android:enabled="false"
        android:title="" />

    <item
        android:id="@+id/catalog"
        android:icon="@drawable/selector_catalog_icon"
        android:iconTint="@color/ivory_white"
        android:title="@string/catalog" />

    <item
        android:id="@+id/user"
        android:icon="@drawable/selector_user_icon"
        android:iconTint="@color/ivory_white"
        android:title="@string/user" />

</menu>